01-nuxeo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mynuxeo
    component: nuxeo
  name: nuxeo
spec:
  containers:
    - name: nuxeo
      image: 'nuxeo/nuxeo:9.10'
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
          protocol: TCP
