02-nuxeo-pod-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: mynuxeo
    component: nuxeo
  name: nuxeo
spec:
  containers:
    - name: nuxeo
      image: 'nuxeo/nuxeo:9.10'
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
          protocol: TCP

      livenessProbe:
        failureThreshold: 10
        httpGet:
          path: /nuxeo/runningstatus
          port: 8080
          scheme: HTTP
        initialDelaySeconds: 30
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 3

      readinessProbe:
        failureThreshold: 10
        httpGet:
          path: /nuxeo/runningstatus
          port: 8080
          scheme: HTTP
        initialDelaySeconds: 30
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 3
