08-nuxeo-deploy-pv-cm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mynuxeo
    component: nuxeo
  name: nuxeo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mynuxeo
      component: nuxeo
  template:
    metadata:
      labels:
        app: mynuxeo
        component: nuxeo
      name: nuxeo
    spec:
      containers:
        - name: nuxeo
          image: 'nuxeo/nuxeo:9.10'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP

          volumeMounts:
          - mountPath: /binaries
            name: binaries
          - mountPath: /docker-entrypoint-initnuxeo.d
            name: nuxeo-config
      volumes:
      - name: binaries
        persistentVolumeClaim:
          claimName: nuxeo-binaries
      - name: nuxeo-config
        configMap:
          name: nuxeo-config
