04-nuxeo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mynuxeo
    component: nuxeo
  name: nuxeo
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: mynuxeo
    component: nuxeo
  sessionAffinity: None
  type: ClusterIP
